fix: invisible margin notes

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -446,6 +446,11 @@ label.margin-toggle:not(.sidenote-number) {
 }
 
 /* New tags */
+label,
+input {
+  -webkit-tap-highlight-color: transparent;
+}
+
 details {
   width: 55%;
 
